<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TBL_events_overview_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabI_event_overview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_overview" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabI_event_directions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_directions" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabI_event_weathers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_weathers" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabI_event_tickets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_ticket" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/VP2_event_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </androidx.viewpager2.widget.ViewPager2>


</LinearLayout>
