<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/colorDarkWhite"
    app:cardElevation="12dp"
    app:cardCornerRadius="8dp"

    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IV_event_card_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/event_lookup_image_desc"

            android:src="@drawable/event_img3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="80">

        </ImageView>

        <TextView
            android:id="@+id/TV_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_title"
            android:textColor="@color/colorLightBlack"
            android:textSize="18sp"

            app:layout_constraintStart_toEndOf="@+id/IV_event_card_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_event_short_desc"
            android:layout_width="165dp"
            android:layout_height="69dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:singleLine="false"
            android:text="@string/event_short_desc"
            android:textColor="@color/colorLightBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/IV_event_card_img"
            app:layout_constraintTop_toBottomOf="@+id/TV_event_title" />

        <TextView
            android:id="@+id/TV_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/event_location"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/TV_event_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/TV_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/event_date"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>