<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Account.LoginFragment"
        android:layout_marginBottom="?android:actionBarSize"
        >

        <!--    <include layout="@layout/frame_layout_loader"/>-->

        <ImageView
            android:id="@+id/IV_login_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon_1_200x200"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <EditText
            android:id="@+id/ET_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_hint"
            android:layout_marginStart="@dimen/content_separation_margin"
            android:layout_marginEnd="@dimen/content_separation_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_login_label_email" />

        <EditText
            android:id="@+id/ET_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:layout_marginStart="@dimen/content_separation_margin"
            android:layout_marginEnd="@dimen/content_separation_margin"
            app:layout_constraintTop_toBottomOf="@+id/TV_login_label_password"
            tools:layout_editor_absoluteX="44dp" />

        <TextView
            android:id="@+id/TV_login_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/TV_login_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_login_email" />

        <TextView
            android:id="@+id/TV_login_action_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_action_sign_up"
            android:padding="@dimen/small_padding"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_login_password" />

                <Button
                    android:id="@+id/BTN_login"
                    style="@style/ThemeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_separation_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/content_separation_margin"
                    android:text="@string/login_action"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TV_login_error_box" />

                <TextView
            android:id="@+id/TV_login_action_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/small_padding"
            android:text="@string/login_action_forgot_pw"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_login_action_register" />

                <TextView
                    android:id="@+id/TV_login_error_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="Error box"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TV_login_action_forgot_pw" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>