<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_rowWeight="1"
    android:layout_columnWeight="1"
    android:layout_margin="16dp"
    android:paddingBottom="8dp"
    app:cardBackgroundColor="@color/colorDarkWhite"

    app:cardCornerRadius="8dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IV_event_card_img"
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/event_lookup_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/event_img3"

            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="80">

        </ImageView>

        <TextView
            android:id="@+id/TV_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"

            android:singleLine="false"
            android:text="@string/event_title"
            android:textColor="@color/colorLightBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IV_event_card_img" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/NSV_event_card_short_desc"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_event_title"
            >

            <TextView
                android:id="@+id/TV_event_short_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="@string/event_short_desc"
                android:textColor="@color/colorLightBlack"
                android:textSize="14sp"
                />

        </androidx.core.widget.NestedScrollView>


        <TextView
            android:id="@+id/TV_event_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/event_location"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toBottomOf="@+id/NSV_event_card_short_desc" />

        <TextView
            android:id="@+id/TV_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/event_date"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/TV_event_location"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/NSV_event_card_short_desc" />

        <TextView
            android:id="@+id/TV_event_date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/event_date"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/TV_event_date" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/event_start_date"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NSV_event_card_short_desc" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/event_end_date"
            android:textColor="@color/colorLightBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>