<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CL_account_overview_settings_change_pw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible" >

    <TextView
        android:id="@+id/TV_account_settings_error_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Error box"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ET_account_overview_current_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ET_account_overview_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_separation_margin"
        android:layout_marginEnd="@dimen/content_separation_margin"
        android:layout_marginBottom="32dp"
        android:hint="@string/account_overview_settings_old_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ET_account_overview_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ET_account_overview_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_separation_margin"
        android:layout_marginEnd="@dimen/content_separation_margin"
        android:hint="@string/account_overview_settings_new_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ET_account_overview_new_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_separation_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/content_separation_margin"
        android:hint="@string/account_overview_settings_repeat_new_pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline6" />


    <Button
        android:id="@+id/BTN_account_settings_change_password"
        style="@style/ThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/account_overview_settings_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_account_overview_new_repeat_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>